syntax = "proto3";

package inventory.v1;

import "google/protobuf/timestamp.proto";

option go_package = "https://github.com/Mahno9/GoMicroservicesCourse/pkg/progo/inventory/v1;inventory_v1";

service InventoryService {
	rpc GetPart(GetPartRequest) returns (GetPartResponse) {}
	rpc ListParts(ListPartsRequest) returns (ListPartsResponse) {}
}

// GetPartRequest represents a request to get a part by its UUID.
message GetPartRequest {
	string uuid = 1;
}

// GetPartResponse represents a response to a get part request.
message GetPartResponse {
	Part part = 1;
}

// ListPartsRequest represents a request to list parts.
message ListPartsRequest {
	PartsFilter filter = 1;
}

// ListPartsResponse represents a response to a list parts request.
message ListPartsResponse {
	repeated Part parts = 1;
}

// PartsFilter represents a filter to list parts.
message PartsFilter {
	repeated string uuids = 1;
	repeated string names = 2;
	repeated Category categories = 3;
	repeated string manufacturer_countries = 4;
	repeated string tags = 5;
}

// Part represents a part in the inventory.
message Part {
	string uuid = 1;
	string name = 2;
	string description = 3;
	double price = 4;
	int64 stock_quantity = 5;
	Category category = 6;
	Dimensions dimensions = 7;
	Manufacturer manufacturer = 8;
	repeated string tags = 9;
	map<string, Value> metadata = 10;
	google.protobuf.Timestamp created_at = 11;
	google.protobuf.Timestamp updated_at = 12;
}

// Manufacturer represents a manufacturer of a part.
message Manufacturer {
	string name = 1;
	string country = 2;
	string website = 3;
}

// Dimensions represents the dimensions of a part.
message Dimensions {
	double length = 1;
	double width = 2;
	double height = 3;
	double weight = 4;
}

// Value represents a value of a metadata field.
message Value {
	oneof kind {
		string string_value = 1;
		int64 int64_value = 2;
		double double_value = 3;
		bool bool_value = 4;
	}
}

// Category represents a category of a part.
enum Category {
	UNKNOWN = 0;
	ENGINE = 1;
	FUEL = 2;
	PORTHOLE = 3;
	WING = 4;
}
